--- a/src/node-search/text-box.css
+++ b/src/node-search/text-box.css
@@ -1,44 +1,26 @@
-.node_search_field_overlay {
+.node_search_overlay {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   position: absolute;
+  background: var(--light-gray);
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  padding: 10px !important;
-  padding-right: 35px !important;
+  padding: 10px;
+  padding-right: 35px;
   pointer-events: none;
 }
-.node_search_field_container {
-  width: 100% !important;
-  height: 100% !important;
-  position: relative;
-}
-.node_search_field {
-  width: 100% !important;
-  height: 100% !important;
-  transition: background 0.25s ease;
-}
-.node_search_field:before {
-  border-bottom-width: 0 !important;
-}
-.node_search_field:after {
-  border-bottom-color: var(--blue) !important;
-  border-bottom-width: 2px !important;
-}
-.node_search_input,
-.node_search_input_blank {
-  padding: 10px !important;
-  padding-right: 35px !important;
-}
 .node_search_input {
-  color: var(--black) !important;
-}
-.node_search_input_blank {
-  overflow: hidden;
-  color: transparent !important;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: var(--black);
+  padding: 10px;
+  padding-right: 35px;
+  font-size: 1em;
+  transition: background 0.25s ease;
 }
 .node_search_icon {
   display: flex;
